[project]
name = "process-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "odk-tools",
    "python-dateutil>=2.9.0.post0",
]

[tool.uv.sources]
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git" }
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git", rev = "main" }
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", rev = "54afff3c8554b39951ceceb8d63396d11838d9dd" }
